--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Forum des Canards</title>
-</head>
-<body>
-	<h1>SITE INCROYABLE</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="global.css">
+		<link rel="stylesheet" type="text/css" href="message.css">
+		<link rel="stylesheet" type="text/css" href="nav.css">
+		<title>Forum des Canards</title>
+	</head>
+	<body>
+		<section class="navigation">
+			<nav>
+				<ul>
+					<li><a class="image" href="#"><img class="logo" src="src/images/logo.png"></a></li>
+					<li><a class="text" href="#">Acceuil</a></li>
+					<li><a class="text" href="#">À Propos</a></li>
+					<li>
+						<form>
+							<input class="field" type="text" method="get">
+							<input class="search" type="image" src="src/images/search.png" alt="submit">
+						</form>
+					</li>
+				</ul>
+			</nav>
+		</section>
+
+		<div class="message">
+		  <div class="user">
+		    <img class="icon" src="src/images/didi.png">
+		    <h1 class="username">Didi Mallet</h1>
+		    <p class="permission">Coquinou</p>
+		  </div>
+		  <div class="content">
+		    <p class="text">Ceci est le message d'un coquinou !<p>
+		  </div>
+		</div>
+	</body>
 </html>
