--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="global.css">
 		<link rel="stylesheet" type="text/css" href="message.css">
+		<link rel="stylesheet" type="text/css" href="last-message.css">
 		<link rel="stylesheet" type="text/css" href="nav.css">
 		<title>Forum des Canards</title>
 	</head>
@@ -14,24 +15,32 @@
 					<li><a class="image" href="#"><img class="logo" src="src/images/logo.png"></a></li>
 					<li><a class="text" href="#">Acceuil</a></li>
 					<li><a class="text" href="#">À Propos</a></li>
-					<li>
-						<form>
-							<input class="field" type="text" method="get">
-							<input class="search" type="image" src="src/images/search.png" alt="submit">
-						</form>
-					</li>
 				</ul>
 			</nav>
+		</section>
+		<section class="last">
+			<h1>Discussions Récentes</h1>
+			<ul>
+				<li class="last">
+				  <div class="user">
+				    <img class="icon" src="src/images/draco.png">
+				    <h1 class="username">Draco Le Noob</h1>
+				    <p class="permission"></p>
+				  </div>
+				  <div class="content">
+				    <p class="text">Message</div>
+				</li>
+			</ul>
 		</section>
 
 		<div class="message">
 		  <div class="user">
-		    <img class="icon" src="src/images/didi.png">
-		    <h1 class="username">Didi Mallet</h1>
-		    <p class="permission">Coquinou</p>
+		    <img class="icon" src="src/images/search.png">
+		    <h1 class="username">Pandawa Irlandais</h1>
+		    <p class="permission">Canneton</p>
 		  </div>
 		  <div class="content">
-		    <p class="text">Ceci est le message d'un coquinou !<p>
+		    <p class="text">Ce message est très constructif<p>
 		  </div>
 		</div>
 	</body>
